# clobmap

./: .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  RELEASING.md  brainstorming.md  codex-analysis-or-clobmap-v-0-1-0.md  design.md  eslint.config.js  functional-test-automation-brainstorming.md  implementation-plan.md  index.html  manual-testing-guide.md  package-lock.json  package.json  playwright.config.ts  tagging-design-doc.md  v11-features-implementation-plan.md  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md
e2e/helpers/: mindmap.ts
e2e/tests/: boot.spec.ts  canvas.spec.ts  draft.spec.ts  export.spec.ts  file-menu.spec.ts  layout-mode.spec.ts  notes-popup.spec.ts  perf.spec.ts  rename.spec.ts  reorder.spec.ts  settings.spec.ts  smoke.spec.ts  tabs.spec.ts  tag-filter.spec.ts  tag-highlight.spec.ts  tag-polish.spec.ts  tag-tree.spec.ts  tags.spec.ts  views.spec.ts
public/: _headers  _redirects  landing.html
scripts/: bump-version.mjs  gen-large-doc.mjs  post-build-web.mjs
src/: App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.tsx  ErrorBoundary.tsx  FileMenu.tsx  FilterCanvas.tsx  MindEdge.tsx  MindMap.tsx  MindMapNode.tsx  NotesPopup.tsx  SettingsMenu.tsx  SplitPanes.tsx  StatusBar.tsx  TabStrip.tsx  TagContextMenu.tsx  TagEditor.tsx  TagMapNode.tsx  TagTreePane.tsx  (+4 more)
(+62 files in other folders)
